# ORKA-ILCRoot

./: .alienEnvironment  .rootrc  CMakeLists.txt  CTestConfig.cmake  CTestCustom.ctest  README_CMake  README_grinst.org  g4_vars.bat  g4vmc_vars.bat  ilceve.vcproj  ilcroot.sln  ilcroot.vcproj  thisproject_variables.bat  vc++.bat  vgm_vars.bat
ANALYSIS/: ANALYSISAllHeaders.h  ANALYSISHeaders.h  ANALYSISLinkDef.h  ANALYSISilcLinkDef.h  CMakelibANALYSIS.pkg  CMakelibANALYSISilc.pkg  DphiAnalysis.C  EventMixingLinkDef.h  IlcAnalysisAlien.cxx  IlcAnalysisAlien.h  IlcAnalysisCuts.cxx  IlcAnalysisCuts.h  IlcAnalysisDataContainer.cxx  IlcAnalysisDataContainer.h  IlcAnalysisDataSlot.cxx  IlcAnalysisDataSlot.h  IlcAnalysisFilter.cxx  IlcAnalysisFilter.h  IlcAnalysisGoodies.cxx  IlcAnalysisGoodies.h  IlcAnalysisGrid.cxx  IlcAnalysisGrid.h  IlcAnalysisManager.cxx  IlcAnalysisManager.h  IlcAnalysisSelector.cxx  IlcAnalysisSelector.h  IlcAnalysisStatistics.cxx  IlcAnalysisStatistics.h  IlcAnalysisTask.cxx  IlcAnalysisTask.h  IlcAnalysisTaskAddObject.cxx  IlcAnalysisTaskAddObject.h  IlcAnalysisTaskBaseLine.cxx  IlcAnalysisTaskBaseLine.h  IlcAnalysisTaskCfg.cxx  IlcAnalysisTaskCfg.h  IlcAnalysisTaskCopyESD.cxx  IlcAnalysisTaskCopyESD.h  IlcAnalysisTaskESDfilter.cxx  IlcAnalysisTaskESDfilter.h  (+92 more)
CORRFW/: CMakelibCORRFW.pkg  CORRFWLinkDef.h  IlcCFAcceptanceCuts.cxx  IlcCFAcceptanceCuts.h  IlcCFContainer.cxx  IlcCFContainer.h  IlcCFCutBase.cxx  IlcCFCutBase.h  IlcCFDataGrid.cxx  IlcCFDataGrid.h  IlcCFEffGrid.cxx  IlcCFEffGrid.h  IlcCFEventClassCuts.cxx  IlcCFEventClassCuts.h  IlcCFEventGenCuts.cxx  IlcCFEventGenCuts.h  IlcCFEventRecCuts.cxx  IlcCFEventRecCuts.h  IlcCFFrame.cxx  IlcCFFrame.h  IlcCFGridSparse.cxx  IlcCFGridSparse.h  IlcCFManager.cxx  IlcCFManager.h  IlcCFPair.cxx  IlcCFPair.h  IlcCFPairAcceptanceCuts.cxx  IlcCFPairAcceptanceCuts.h  IlcCFPairIsPrimaryCuts.cxx  IlcCFPairIsPrimaryCuts.h  IlcCFPairPidCut.cxx  IlcCFPairPidCut.h  IlcCFPairQualityCuts.cxx  IlcCFPairQualityCuts.h  IlcCFParticleGenCuts.cxx  IlcCFParticleGenCuts.h  IlcCFTrackCutPid.cxx  IlcCFTrackCutPid.h  IlcCFTrackIsPrimaryCuts.cxx  IlcCFTrackIsPrimaryCuts.h  (+9 more)
CVG/: CVG.cxx  CVG.h  CVGresource.h  CVGresources.h  CVGtime.h  CVGtypes.h  CVGwordsize.h  ReadMe.txt  Resource.cxx  Resource.h
DCH/: CMakelibDCHbase.pkg  CMakelibDCHfast.pkg  CMakelibDCHrec.pkg  CMakelibDCHsim.pkg  DCHHeaders.h  DCHLinkDef.h  DCHbaseLinkDef.h  DCHfastLinkDef.h  DCHrecLinkDef.h  DCHsimLinkDef.h  IlcComplexCluster.cxx  IlcComplexCluster.h  IlcDCH.cxx  IlcDCH.h  IlcDCHCalibra.cxx  IlcDCHCalibra.h  IlcDCHClustersArray.cxx  IlcDCHClustersArray.h  IlcDCHClustersRow.cxx  IlcDCHClustersRow.h  IlcDCHCommonParam.cxx  IlcDCHCommonParam.h  IlcDCHFast.cxx  IlcDCHFast.h  IlcDCHFindClustersFast.C  IlcDCHParam.cxx  IlcDCHParam.h  IlcDCHPartID.cxx  IlcDCHPartID.h  IlcDCHRawStream.cxx  IlcDCHRawStream.h  IlcDCHRecParam.cxx  IlcDCHRecParam.h  IlcDCHRecoParam.cxx  IlcDCHRecoParam.h  IlcDCHReconstructor.cxx  IlcDCHReconstructor.h  IlcDCHSimParam.cxx  IlcDCHSimParam.h  IlcDCHTriggerL1.cxx  (+106 more)
DISPLAY/: CMakelibDISPLAY.pkg  DISPLAYHeaders.h  DISPLAYLinkDef.h  IlcDetectorFrame.cxx  IlcDetectorFrame.h  IlcDisplay2.cxx  IlcDisplay2.h  IlcDisplayClusters.cxx  IlcDisplayClusters.h  IlcDisplayFrame.cxx  IlcDisplayFrame.h  IlcDisplayHLT.cxx  IlcDisplayHLT.h  IlcInfoFrame.cxx  IlcInfoFrame.h  IlcMenu.cxx  IlcMenu.h  IlcModuleInfo.cxx  IlcModuleInfo.h  IlcPoints.cxx  IlcPoints.h  IlcSettingFrame.cxx  IlcSettingFrame.h  IlcShutterFrame.cxx  IlcShutterFrame.h  IlcShutterItem.cxx  IlcShutterItem.h  IlcSliderFrame.cxx  IlcSliderFrame.h  README  display2.C  geom_simple.root
DPMJET/: CMakelibdpmjet.pkg  IlcDpmJetRndm.cxx  IlcDpmJetRndm.h  dpmjet3.0-5.f  dpmjetLinkDef.h  openfile.f  phojet1.12-35c3.f  pythia6115dpm3.f  shmakov.out  user3.0-5.f
EPOS/: CMakelibEPOS.pkg  EPOSLinkDef.h  IlcGenEpos.cxx  IlcGenEpos.h  IlcGenEposIsajetToPdgConverter.cxx  IlcGenEposIsajetToPdgConverter.h  TEpos.cxx  TEpos.h
EVE/: CMakebinilceve.pkg  CMakelibEveBase.pkg
EVGEN/: .rootrc  CMakelibEVGEN.pkg  EVGENHeaders.h  EVGENLinkDef.h  IlcDecayer.h  IlcDecayerPolarized.cxx  IlcDecayerPolarized.h  IlcDimuCombinator.cxx  IlcDimuCombinator.h  IlcGeVSimParticle.cxx  IlcGeVSimParticle.h  IlcGenAfterBurnerFlow.cxx  IlcGenAfterBurnerFlow.h  IlcGenBeamGas.cxx  IlcGenBeamGas.h  IlcGenBox.cxx  IlcGenBox.h  IlcGenCocktail.cxx  IlcGenCocktail.h  IlcGenCocktailAfterBurner.cxx  IlcGenCocktailAfterBurner.h  IlcGenCocktailEntry.cxx  IlcGenCocktailEntry.h  IlcGenCorrHF.cxx  IlcGenCorrHF.h  IlcGenCosmicsParam.cxx  IlcGenCosmicsParam.h  IlcGenDeuteron.cxx  IlcGenDeuteron.h  IlcGenDoubleScan.cxx  IlcGenDoubleScan.h  IlcGenEMCocktail.cxx  IlcGenEMCocktail.h  IlcGenEMlib.cxx  IlcGenEMlib.h  IlcGenExtFile.cxx  IlcGenExtFile.h  IlcGenFixed.cxx  IlcGenFixed.h  IlcGenFunction.cxx  (+83 more)
FASTSIM/: .rootrc  CMakelibFASTSIM.pkg  FASTSIMHeaders.h  FASTSIMLinkDef.h  FASTSmear.C  IlcFastDetector.cxx  IlcFastDetector.h  IlcFastEvent.cxx  IlcFastEvent.h  IlcFastGlauber.cxx  IlcFastGlauber.h  IlcFastMuonTrackingAcc.cxx  IlcFastMuonTrackingAcc.h  IlcFastMuonTrackingEff.cxx  IlcFastMuonTrackingEff.h  IlcFastMuonTrackingRes.cxx  IlcFastMuonTrackingRes.h  IlcFastMuonTriggerEff.cxx  IlcFastMuonTriggerEff.h  IlcFastParticle.cxx  IlcFastParticle.h  IlcFastResponse.cxx  IlcFastResponse.h  IlcMUONFastTracking.cxx  IlcMUONFastTracking.h  IlcMUONFastTrackingEntry.cxx  IlcMUONFastTrackingEntry.h  IlcQuenchingWeights.cxx  IlcQuenchingWeights.h  PathLengthTest.C  fastGen.C  fastGenEMCocktail.C  fastGenPA.C  fastGenQuarkonia.C  plotContWeight.C  plotDiscreteWeight.C  readPrimaries.C  testAliQuenching.C  testIlcGlauberQuenching.C  uncorrBg.C
GRP/: MakeCTPDummyEntries.C  MakeCTPLTUConfigEntry.C  MakeCTPTimeAlignEntry.C  MakeCosmicTriggersEntry.C  MakeForwardMisAlignment.C  MakeGRPRecoParam.C  MakeLHCClockPhaseEntry.C  MakePipeMisalignment.C  MakeSTRUCTFullMisAlignment.C  MakeSTRUCTResMisAlignment.C  MakeSTRUCTZeroMisAlignment.C  TestGRPPreprocessor.C  UpdateCDBCTPConfig.C  UpdateCDBGRPEntry.C  UpdateCDBGRPEntryMC.C  UpdateCDBIdealGeom.C  UpdateCDBVertexDiamond.C
(+3217 files in other folders)
